	* Implemented the 'Cut', 'Copy' and 'Paste' buttons.
2017-02-22 Fred Gleason <fredg@paravelsystems.com>
	* Implemented check for modified logs in
	'src/rdlogeditb/editlogdialog.cpp' and
	'src/rdlogeditb/editlogdialog.h'.
2017-02-22 Fred Gleason <fredg@paravelsystems.com>
	* Modified the 'Edit Log Entry' dialog to display a blank cart
	number field if no cart has been selected yet.
2017-02-22 Fred Gleason <fredg@paravelsystems.com>
	* Enabled correct display of Chain, Marker and Track events
	in the 'Edit Log' dialog.
	* Enabled correct editing of Chain, Marker and Track events
	in the 'Edit Log Entry' dialog.
2017-02-22 Fred Gleason <fredg@paravelsystems.com>
	* Added a 'List Logs' dialog in 'src/rdlogeditb/listlogsdialog.cpp'
	and 'src/rdlogeditb/listlogsdialog.h'.
	* Added a 'ServiceBox' widget in 'src/rdlogeditb/servicebox.cpp'
	and 'src/rdlogeditb/servicebox.h'.
2017-02-22 Fred Gleason <fredg@paravelsystems.com>
	* Added a 'capiError()' signal to all model classes in 'src/common/'.
2017-02-22 Fred Gleason <fredg@paravelsystems.com>
	* Added C API error handling to RDLibraryb(1).
2017-02-23 Fred Gleason <fredg@paravelsystems.com>
	* Implemented dynamic login in 'src/common/config.cpp' and
	'src/common/config.h'.
2017-02-23 Fred Gleason <fredg@paravelsystems.com>
	* Implemented the 'make rpm' target.
2017-02-23 Fred Gleason <fredg@paravelsystems.com>
	* Added desktop entries in 'xdg/'.
2017-02-23 Fred Gleason <fredg@paravelsystems.com>
	* Renamed the Windows icons.
2017-02-23 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug in 'src/common/config.cpp' and
	'src/common/config.h' that caused the Username to be detected
	from the environment by RDAdminb(1).
2017-02-23 Fred Gleason <fredg@paravelsystems.com>
	* Added the Version, Hostname and Username to the titlebar of
	RDLibararyb(1) and RDLogEditb(1).
	* Added the Version to the titlebar of RDAdminb(1).
2017-02-24 Fred Gleason <fredg@paravelsystems.com>
	* Added a 'make nsis-installer' target.